# new_york_calculate

./: .gitignore  Cargo.toml  Makefile  Package.swift  devenv.nix  package-lock.json  readme.md  setup.py  version.sh
.github/workflows/: build.yml  build_app.yml  build_node.yaml  build_node.yml  build_python.yml  build_rust.yml  ci.yml  rust.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/vivalaakam.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/vivalaakam.xcuserdatad/xcschemes/: xcschememanagement.plist
benchmarks/: calculate.py  calculate_actors.py
examples/: calculate.rs  calculate_agent_iter.rs  calculate_iter.rs  calculate_limit_iter.rs
new_york_calculate/: __init__.py  calculate.py  calculate_actors.py  calculate_rust.py  debug_best.py  ga.py  get_id.py  intervals.py
node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
node/__test__/: getApplicantId.test.js  index.spec.mjs
node/new_york_calculate/: index.ts  native.js
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: get_id.rs  lib.rs
python/: Cargo.toml  requirements.txt  setup.py
python/new_york_calculate/: __init__.py  calculate.py  calculate_rust.py  calculate_rust_v1.py  calculate_rust_v2.py  debug_best.py  format_candles.py  format_result.py  get_candles.py  get_candles_rust.py  get_id.py  list_to_weights.py  parse.py  prepare_candles.py  random_id.py  to_nearest.py
python/src/: lib.rs  py_calculate.rs  py_calculate_result.rs  py_calculate_v1.rs  py_calculate_v2.rs  py_candle.rs
python/tests/: test_calculate.py  test_get_candles.py  test_get_candles_rust.py  test_parse.py  test_prepare_candles.py  test_py_candle.py
src/: activate.rs  agent.rs  calculate.rs  calculate_activate.rs  calculate_agent.rs  calculate_agent_iter.rs  calculate_command.rs  calculate_iter.rs  calculate_result.rs  calculate_stats.rs  candle.rs  candle_response.rs  command.rs  get_candles.rs  get_candles_with_cache.rs  get_id.rs  get_interval_key.rs  hash_md5.rs  indicators.rs  lib.rs  order.rs  portfolio.rs  py_calculate_v1.rs  py_candle.rs  result.rs  score.rs  stats.rs  test_utils.rs  types.rs  utils.rs
src/agent/: errors.rs  macros.rs
src/indicators/: ad.rs  adx.rs  ao.rs  atr.rs  bbands.rs  buffer.rs  cci.rs  cpr.rs  ema.rs  hma.rs  macd.rs  macros.rs  mom.rs  obv.rs  result.rs  rsi.rs  sma.rs  stoch.rs  stochrsi.rs  strend.rs  vpt.rs  vwma.rs  willr.rs
swift/: Cargo.toml  README.md
swift/Sources/NewYorkCalculate/: NewYorkCalculate.swift
swift/Tests/NewYorkCalculateTests/: NewYorkCalculateTests.swift
swift/include/: module.modulemap
swift/src/: lib.rs
tests/: candles.json  candles.pickle  test_new_york_calculate_actors.py  test_new_york_calculate_rust.py
