[package]
name = "new_york_calculate_core"
version = "0.0.60"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
edition = "2018"
description = "Library for calculation some things"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7", features = ["v4"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.127"

[lib]
name = "new_york_calculate_core"
