[package]
name = "new_york_calculate"
version = "0.0.35"
authors = ["Andrey Makarov"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[dependencies.new_york_calculate_core]
version = "*"
path = "../"
