[package]
name = "new_york_calculate"
version = "0.0.37"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rayon = "1.5"
pyo3 = { version = "0.16", features = ["extension-module"] }
tokio = { version = "1.19" , features = ["full"]}


[lib]
name = "new_york_calculate"
crate-type = ["cdylib"]

[dependencies.new_york_calculate_core]
version = "*"
path = "../"
